--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anitype</title>
-    <link rel="stylesheet" href="/anitype/style/style.css">
-    <link rel="stylesheet" href="/anitype/style/about.css">
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/about.css">
 </head>
 <body>
     <header>
@@ -28,10 +28,10 @@
             </nav>
             <div class="link__img">
                 <div class="img__item">
-                    <a href="" class="nav__link"><img src="/anitype/img/search.svg" alt="Search"></a>
+                    <a href="" class="nav__link"><img src="/img/search.svg" alt="Search"></a>
                 </div>
                 <div class="nav__item">
-                    <a href="" class="nav__link"><img src="/anitype/img/user.svg" alt="User"></a>
+                    <a href="" class="nav__link"><img src="/img/user.svg" alt="User"></a>
                 </div>
             </div>
         </div>
@@ -39,9 +39,9 @@
 
     <div class="content">
         <div class="left_panel">
-            <img src="/anitype/img/poster.png" alt="poster" class="poster">
-            <button class="action add"><img src="/anitype/img/folder 1.svg" alt="add">Добавить в папку</button>
-            <button class="action open"><img src="/anitype/img/folder 1 (1).svg" alt="open">Открыть в приложении</button>
+            <img src="/img/poster.png" alt="poster" class="poster">
+            <button class="action add"><img src="/img/folder 1.svg" alt="add">Добавить в папку</button>
+            <button class="action open"><img src="/img/folder 1 (1).svg" alt="open">Открыть в приложении</button>
         </div>
         <div class="info">
             <div class="name">
@@ -52,11 +52,11 @@
                 <div class="line">
                     <a href="#" class="btn">Смотреть</a>
                     <a href="#" class="btn">Смотреть вместе</a>
-                    <a href="#" class="btn_img"><img src="/anitype/img/flag.svg" alt="flag"></a>
-                    <a href="#" class="btn_img"><img src="/anitype/img/bell.svg" alt="bell"></a>
+                    <a href="#" class="btn_img"><img src="/img/flag.svg" alt="flag"></a>
+                    <a href="#" class="btn_img"><img src="/img/bell.svg" alt="bell"></a>
                 </div>
                 <div class="new_episode">
-                    <span class="line"><img src="/anitype/img/clock 1.svg" alt="clock">Следующая серия выйдет</span>
+                    <span class="line"><img src="/img/clock 1.svg" alt="clock">Следующая серия выйдет</span>
                     <span>16.11.2025 (через 6 дней)</span>
                 </div>
                 <h2 class="about">О сериале</h2>
