--- a/watch.html
+++ b/watch.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/anitype/style/style.css">
-    <link rel="stylesheet" href="/anitype/style/watch.css">
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/watch.css">
     <title>AnitypeWatch</title>
 </head>
 <body>
@@ -28,25 +28,25 @@
             </nav>
             <div class="link__img">
                 <div class="img__item">
-                    <a href="" class="nav__link"><img src="/anitype/img/search.svg" alt="Search"></a>
+                    <a href="" class="nav__link"><img src="/img/search.svg" alt="Search"></a>
                 </div>
                 <div class="nav__item">
-                    <a href="" class="nav__link"><img src="/anitype/img/user.svg" alt="User"></a>
+                    <a href="" class="nav__link"><img src="/img/user.svg" alt="User"></a>
                 </div>
             </div>
         </div>
     </header>
     <div class="content">
         <div class="video_player">
-            <video src="" poster="/anitype/img/player.svg"></video>
+            <video src="" poster="/img/player.svg"></video>
             <div class="action">
                 <div class="name">Ванпанчмен 3</div>
                 <div class="btn_reaction">
                     <div class="reaction">
-                        <button class="btn_reaction reaction like"><img src="/anitype/img/like 1.svg" alt="like">31</button>
-                        <button class="btn_reaction reaction dislike"><img src="/anitype/img/like 2.svg" alt="dislike"></button>
+                        <button class="btn_reaction reaction like"><img src="/img/like 1.svg" alt="like">31</button>
+                        <button class="btn_reaction reaction dislike"><img src="/img/like 2.svg" alt="dislike"></button>
                     </div>
-                    <button class="btn_reaction share"><img src="/anitype/img/share 1.svg" alt="share">Поделиться</button>
+                    <button class="btn_reaction share"><img src="/img/share 1.svg" alt="share">Поделиться</button>
                 </div>
             </div>
         </div>
